# gap

./: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  DockerFile  README.md  doctest.cfg  notes.md  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
cmake/: FindCoroutines.cmake  GapConfig.cmake.in  compiler_warnings.cmake  gap-config.cmake.in  gapConfig.cmake.in  prevent_in_source_builds.cmake  project_settings.cmake  sanitizers.cmake  static_analyzers.cmake  utils.cmake  vcpkg_setup.cmake
core/: CMakeLists.txt
core/include/core/: source_location.hpp
core/include/gap/core/: benchmark.hpp  bigint.hpp  common.hpp  concepts.hpp  config.hpp  coroutine.hpp  crtp.hpp  dense_map.hpp  fixed_string.hpp  functional.hpp  generator.hpp  graph.hpp  hash.hpp  memoize.hpp  on_scope_exit.hpp  optional.hpp  overloads.hpp  parser.hpp  pointer.hpp  property.hpp  ranges.hpp  recursive_generator.hpp  source_location.hpp  stream.hpp  strong_type.hpp  type_traits.hpp  union_find.hpp
core/include/gap/range/: algorithm.hpp  concepts.hpp  range.hpp  view.hpp
core/include/gap/range/algorithm/: result_types.hpp  transform.hpp
core/include/gap/range/detail/: range_access.hpp
core/include/gap/range/iterator/: basic_iterator.hpp  default_sentinel.hpp
core/include/gap/range/view/: adaptor.hpp  all.hpp  base.hpp  facade.hpp  inteface.hpp  transform.hpp  view.hpp
core/src/: CMakeLists.txt
core/src/core/: source_location.cpp
coro/: CMakeLists.txt
coro/include/gap/coro/: async_manual_reset_event.hpp  awaitable_traits.hpp  broken_promise.hpp  coroutine.hpp  fmap.hpp  generator.hpp  manual_reset_event.hpp  recursive_generator.hpp  shared_task.hpp  single_consumer_event.hpp  sync_wait.hpp  sync_wait_task.hpp  task.hpp  when_all_ready.hpp
coro/inlude/gap/coro/: coroutine.hpp  generator.hpp  recursive_generator.hpp
coro/src/: async_manual_reset_event.cpp
example/: CMakeLists.txt
examples/: CMakeLists.txt  coroutines-example.cpp
graph/: CMakeLists.txt
graph/include/gap/graph/: graph.hpp
mlir/: CMakeLists.txt
mlir/include/gap/mlir/: common.hpp  functors.hpp  views.hpp
mlir/src/: views.cpp
sarif/: CMakeLists.txt
sarif/include/gap/sarif/: definitions.hpp  sarif.hpp
sarif/scripts/sarif-headergen/: README.md  pyproject.toml
sarif/scripts/sarif-headergen/src/sarif_headergen/: __cli__.py  __init__.py  output.py  schema.py
sarif/src/: definitions.cpp  sarif.cpp
test/: CMakeLists.txt  main.cpp
test/core/: CMakeLists.txt  benchmark.cpp  bigint.cpp  concepts.cpp  crtp.cpp  dense_map.cpp  functional.cpp  generator.cpp  graph.cpp  hash.cpp  memoize.cpp  optional.cpp  parser.cpp  ranges.cpp  recursive_generator.cpp  stream.cpp  strong_type.cpp  union_find.cpp
test/coro/: CMakeLists.txt  counted.cpp  counted.hpp  generator.cpp  recursive_generator.cpp  shared_task.cpp  sync_wait.cpp  task.cpp  when_all_ready.cpp
test/graph/: CMakeLists.txt  graph.cpp
test/mlir/: CMakeLists.txt  functors.cpp  mlir_context_fixture.hpp  mlir_module_fixture.hpp  views.cpp
test/sarif/: CMakeLists.txt  definitions.cpp  sarif.cpp
